--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,40 @@
 spring.application.name=learnscape
+server.port=8090
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/learnscapeDB?zeroDateTimeBehavior=convertToNull
+spring.datasource.username=********
+spring.datasource.password=********
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.javax.persistence.validation.mode=none
+
+spring.data.rest.basePath=/data-api
+
+#debug=true
+#trace=true
+
+logging.level.root=INFO
+#logging.level.com.debarshi.learnscape.aspects = ERROR
+#logging.level.com.debarshi.learnscape.controller = ERROR
+
+# Initialize log group learnscape_error
+logging.group.learnscape_error=com.debarshi.learnscape.aspects, com.debarshi.learnscape.controller
+# Set log level to log group learnscape_error
+logging.level.learnscape_error=ERROR
+
+spring.output.ansi.enabled=ALWAYS
+
+learnscape.pageSize=10
+
+learnscape.contact.pageSize=5
+learnscape.contact.successMsg=Your message is submitted successfully.
+
+learnscape.branches[0]=Kolkata
+learnscape.branches[1]=Delhi
+learnscape.branches[2]=Hyderabad
+learnscape.branches[3]=Bangalore
+
+# Actuator properties
+management.endpoints.web.base-path=/learnscape/actuator
+management.endpoints.web.exposure.include=*
