--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=learnscape
 server.port=8090
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/learnscapeDB?zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://localhost:3306/learnscape?zeroDateTimeBehavior=convertToNull
 spring.datasource.username=********
 spring.datasource.password=********
 spring.jpa.show-sql=true
