Added Templates & Static Assets

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.username=********
 spring.datasource.password=********
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.javax.persistence.validation.mode=none
 
 spring.data.rest.basePath=/data-api
